crates/plotnik-lib/tests/03-analyze/direct_recursion/no_escape_in_field.txt
E = (call body: (E))
==== diagnostics ====
error: infinite recursion: no escape path
 --> query.ptk:1:18
  |
1 | E = (call body: (E))
  |                  ^
  |                  |
  |                  E references itself
  |
help: add a non-recursive branch to terminate: `[Base: ... Rec: (Self)]`
==== symbols ====
E
  E (cycle)
